logs/rtt.20260405-140856.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent2)
error[E0405]: cannot find trait `BSTSpecFns` in this scope
   --> src/Chap37/BSTRBStEph.rs:166:52
    |
166 |     pub trait BSTRBNodeFns<T: TotalOrder>: Sized + BSTSpecFns<T> + BalBinTreeTrait<T> {
    |                                                    ^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 24 +     use crate::Chap37::BSTPlainStEph::BSTPlainStEph::BSTSpecFns;
    |

For more information about this error, try `rustc --explain E0405`.
error: could not compile `apas-verus` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `apas-verus` (lib test) due to 1 previous error
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 8s
